# func-eda-mlang

./: .gitignore  LICENSE  Makefile  README.md  common.mk  pytest.ini
.github/workflows/: ci.yml
bindings/ffi/: cbindgen.toml
bindings/wasm/: Cargo.toml
bindings/wasm/src/: lib.rs
core/: Cargo.toml  Makefile
core/.cargo/: config.toml
core/src/: config.rs  lib.rs  retry.rs  routing.rs  telemetry.rs  wit_bindings.rs
docs/plans/: cleanup-checklist.md  routing-architecture.md
docs/research/: approaches.md  core-architecture-decisions.md
infra/: Makefile  docker-compose.yml
infra/scripts/: send-test-event.sh
plans/: poc-implementation-plan.md
sdks/go/: Makefile  README.md  go.mod  go.sum
sdks/go/examples/ffi-example/: Makefile  handler.go  main.go
sdks/go/examples/ffi-output-example/: Makefile  handler.go  main.go  routing.yaml
sdks/go/examples/wasm-example/: handler.go  main.go
sdks/go/pkg/ffi/: README.md  embedded_darwin_amd64.go  embedded_darwin_arm64.go  embedded_linux_amd64.go  embedded_linux_arm64.go  embedded_windows_amd64.go  ffi.go  loader.go  run.go
sdks/go/pkg/sdk/: consumer.go  eda.go  options.go  run.go  sdk.go  types.go
sdks/go/pkg/wasm/: run.go  wasm.go
sdks/python/: Makefile  README.md  pyproject.toml
sdks/python/eda_sdk/: __init__.py  consumer.py  core.py  run.py  types.py
sdks/python/eda_sdk/ffi/: __init__.py  core.py  loader.py  run.py
sdks/python/eda_sdk/ffi/include/: eda_core.h
sdks/python/eda_sdk/wasm/: __init__.py  core.py  run.py
sdks/python/examples/: ffi_output_example.py
sdks/python/examples/ffi/: Makefile  func.py
sdks/python/examples/ffi-output/: Makefile  func.py
sdks/python/tests/: test_ffi_core.py
tests/e2e/: conftest.py  test_examples.py
wit/: eda-core.wit
