[package]
name = "eda-core"
version = "0.1.0"
edition = "2021"
authors = ["OpenShift EDA Team"]
description = "Shared core for multi-language EDA Functions SDK"
license = "Apache-2.0"

[lib]
name = "eda_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# For WASM bindings
wasm-bindgen = "0.2"

# For JSON serialization (CloudEvents config)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
# Optimize for size in release builds (important for WASM)
opt-level = "z"
lto = true
codegen-units = 1
strip = true
