[package]
name = "eda-wasm"
version = "0.1.0"
edition = "2021"
authors = ["OpenShift EDA Team"]
description = "WASM bindings for EDA Functions SDK"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
eda-core = { path = "../../core" }
wasm-bindgen = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
