[package]
name = "eda-wasm"
version = "0.1.0"
edition = "2021"
authors = ["OpenShift EDA Team"]
description = "WASM Component Model bindings for EDA Functions SDK"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
eda-core = { path = "../../core" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[package.metadata.component]
package = "eda:core"

[package.metadata.component.target]
path = "../../wit"
